# AcademicContactsGui

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  program_launcher.py  pyproject.toml  toml_gen.py
src/academic_contacts/: about.py  desktop.py  main.py  program.py
src/academic_contacts/modules/: configure.py
