[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "academic_contacts"
version = "0.1.1"
description = "Organize your academic contacts"
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["organizer", "contact", "research"]
dependencies = [
    "PyQt5"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx/AcademicContactsGui/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx/AcademicContactsGui/tree/main/doc"
"Source" = "https://github.com/trucomanx/AcademicContactsGui"

[project.scripts]
"academic-contacts" = "academic_contacts.program:main"

[tool.setuptools]
packages = ["academic_contacts", "academic_contacts.modules"]

[tool.setuptools.package-data]
"academic_contacts" = ["icons/logo.png"]
